# QB-Downloader

./: .gitignore  README.md  docker-compose.yml  index.html  package-lock.json  package.json  script.sh  vite.config.ts
.gemini/: system.md
.github/workflows/: release.yml
android/: README.md  gradle.properties  gradlew  settings.gradle.kts
android/app/: build.gradle.kts
android/gradle/: libs.versions.toml
docs/: QD_REVERSE_ENGINEERING.md  TAURI_REBUILD_SPEC.md
server/: cancel-artifact.test.js  index.js  package-lock.json  package.json
server/public/: app.js  index.html  style.css
src/: App.tsx  constants.ts  dialogStore.ts  styles.css  types.ts  utils.test.ts  utils.ts
src-tauri/: Cargo.toml  scratch.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: artifact_parser.rs  download_manager.rs  lib.rs  main.rs  path_safety.rs  qb_client.rs  secure_storage.rs  system_stats.rs  types.rs
src/components/: AppErrorBoundary.tsx  BuildGroup.tsx  BulkEntryModal.tsx  CompleteDialog.tsx  Dashboard.tsx  FilterSelectionModal.tsx  ProgressBar.tsx  ProgressDialog.tsx  SettingsModal.tsx  TaskAccordions.tsx
src/hooks/: useBuilds.ts  useDownload.ts  useServerSync.ts  useSettings.ts
tools/: Test-QBRangeSupport.ps1  dump_address_data.py  extract_all_manifest_resources.py  extract_net_resources.py  extract_with_alignment.py  find_txt_resources.py  list_extracted.py  parse_resources.py  scan_pe.py  test-filesize.ps1  unpack_old_resources.py
tools/extracted/: QD.QDMessageBox.resources  QD.SRBRAddress.txt  QD.SRIBAddress.txt  QD.SRINAddress.txt  (+1 more)
(+19 files in other folders)
