[package]
name = "quickbuild-download-manager"
version = "0.1.40"
description = "QuickBuild artifact download manager"
authors = ["QuickBuild Downloader"]
edition = "2021"

[lib]
name = "quickbuild_download_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
base64 = "0.22"
futures-util = "0.3"
keyring = { version = "3.6", features = ["windows-native", "linux-native-sync-persistent"] }
opener = "0.7"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.8.5", features = ["image-png", "tray-icon"] }
tauri-plugin-dialog = "2.4.1"
tauri-plugin-stronghold = "2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "sync", "time"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
